# SlipNFrag

./: BUILD.md  CHANGELOG.md  PRIVACY.md  README.md  SUPPORT.md  SlipNFrag.sln  viewmodels.txt
OpenXR-SDK-Source/src/SlipNFrag-XR/app/src/main/cpp/: AllocationList.h  AppState.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CachedBuffers.cpp  CachedBuffers.h  CachedLightmaps.cpp  CachedLightmaps.h  CachedSharedMemoryBuffers.cpp  CachedSharedMemoryBuffers.h  CachedSharedMemoryTextures.cpp  CachedSharedMemoryTextures.h  CachedTextures.cpp  CachedTextures.h  Constants.h  Controller.cpp  Controller.h  CylinderProjection.cpp  CylinderProjection.h  DirectRect.cpp  EngineThread.cpp  ImageAsset.cpp  ImageAsset.h  Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  KeyboardCell.h  Lightmap.cpp  Lightmap.h  LightmapTexture.h  LoadedSprite.h  LoadedTurbulent.h  MemoryAllocateInfo.cpp  MemoryAllocateInfo.h  PerImage.cpp  PerImage.h  Pipeline.cpp  Pipeline.h  (+18 more)
SlipNFrag/: snd_null.cpp  sys_null.cpp
SlipNFrag-MacOS/: AppDelegate.m  DirectRect.cpp  DirectRect.h  Engine.h  Engine.mm  Info.plist  Input.cpp  Input.h  Locks.cpp  Locks.h  Locks.mm  MainView.swift  PreferencesController.mm  PreferencesStoryboardView.swift  PreferencesView.swift  SettingsManager.swift  Shaders.metal  SlipNFrag-MacOS-App.swift  SlipNFrag-MacOS-Bridging-Header.h  StoryboardView.swift  ViewController.h  ViewController.mm  cd_macos.cpp  in_macos.cpp  snd_macos.cpp  sys_macos.cpp  sys_macos.h  vid_macos.cpp
SlipNFrag-OVR/app/src/main/cpp/: AliasVertices.h  Allocation.h  AllocationList.h  AppMode.h  AppState.cpp  AppState.h  Buffer.cpp  Buffer.h  BufferWithOffset.h  CMakeLists.txt  CachedBuffers.cpp  CachedBuffers.h  CachedLightmaps.cpp  CachedLightmaps.h  CachedPipelineDescriptorResources.cpp  CachedPipelineDescriptorResources.h  CachedSharedMemoryBuffers.cpp  CachedSharedMemoryBuffers.h  CachedSharedMemoryTextures.cpp  CachedSharedMemoryTextures.h  CachedTextures.cpp  CachedTextures.h  ColorSwapChain.h  Console.h  ConsoleColorSwapChain.h  ConsoleFramebuffer.h  ConsolePerImage.cpp  ConsolePerImage.h  ConsoleView.h  Constants.h  Context.h  Controller.cpp  Controller.h  CylinderProjection.cpp  CylinderProjection.h  DescriptorSets.h  Device.cpp  Device.h  EngineThread.cpp  Framebuffer.h  (+59 more)
SlipNFrag-PCXR/: AndroidLog.cpp  AppInput.cpp  AppInput.h  AppState.cpp  AppState.h  AppState_pcxr.cpp  AppState_pcxr.h  CMakeLists.txt  EngineThread.cpp  EngineThread.h  FileLoader.cpp  FileLoader.h  FileLoader_pcxr.cpp  FileLoader_pcxr.h  ImageAsset.cpp  ImageAsset.h  Input.cpp  Logger_pcxr.cpp  Logger_pcxr.h  Scene.cpp  Scene.h  Scene_Setup.cpp  Utils.h  cd_pcxr.cpp  in_pcxr.cpp  main.cpp  snd_pcxr.cpp  sys_pcxr.cpp  sys_pcxr.h  version.rc.in  vid_pcxr.cpp  vid_pcxr.h
SlipNFrag-PCXR/android/: log.h
SlipNFrag-VisionOS/: Alias.h  Alias.mm  AppMode.h  AppState.cpp  AppState.h  DirectRect.cpp  DirectRect.h  Engine.h  Engine.mm  EngineMode.swift  EngineStop.h  EngineStop.mm  Fences.h  Fences.mm  FencesRotated.h  FencesRotated.mm  GameMode.swift  Info.plist  Input.cpp  Input.h  Lightmap.h  Lightmap.mm  LightmapCopying.h  Locks.cpp  Locks.h  Locks.mm  MainScene.swift  Particles.h  Particles.mm  ParticlesEntry.h  PerDrawable.h  PerDrawable.mm  PerView.h  PerView.mm  Pipelines.h  Pipelines.mm  PlayView.swift  Renderer.h  Renderer.mm  SettingsView.swift  (+38 more)
SlipNFrag-Win64/: AppState.h  DirectRect.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Locks.cpp  Locks.h  SlipNFrag-Win64.aps  SlipNFrag-Win64.rc  SlipNFrag-Win64.vcxproj  SlipNFrag-Win64.vcxproj.filters  cd_win64.cpp  cd_win64.h  in_win64.cpp  main.cpp  resource.h  snd_win64.cpp  snd_win64.h  sys_win64.cpp  sys_win64.h  vid_win64.cpp  vid_win64.h  virtualkeymap.h
SlipNFrag-Windows/: MainPage.cpp  MainPage.h  Package.appxmanifest  SlipNFrag-Windows.vcxproj  SlipNFrag-Windows.vcxproj.filters  SlipNFrag-Windows_TemporaryKey.pfx  cd_uwp.cpp  snd_uwp.cpp  sys_uwp.cpp  sys_uwp.h
SlipNFrag-XR/: build.gradle  gradle.properties  settings.gradle.kts
SlipNFrag-XR/app/src/main/cpp/: AppInput.cpp  AppInput.h  AppState.cpp  AppState.h  AppState_oxr.cpp  AppState_oxr.h  AppState_xr.cpp  AppState_xr.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CachedBuffers.cpp  CachedBuffers.h  CachedIndexBuffers.cpp  CachedLightmaps.cpp  CachedLightmaps.h  CachedSharedMemoryBuffers.cpp  CachedSharedMemoryTextures.cpp  CachedSharedMemoryTextures.h  CachedTextures.cpp  Constants.h  CylinderProjection.cpp  DescriptorResources.h  DescriptorResourcesLists.cpp  DescriptorResourcesLists.h  EngineThread.cpp  EngineThread.h  FileLoader.cpp  FileLoader.h  FileLoader_oxr.cpp  FileLoader_oxr.h  FileLoader_xr.cpp  FileLoader_xr.h  Input.cpp  Input.h  Keyboard.cpp  Lightmap.cpp  Lightmap.h  LightmapRGBA.cpp  LightmapRGBA.h  (+64 more)
SlipNFrag-iOS/: Info.plist  Locks.cpp  Locks.h  cd_ios.cpp  in_ios.cpp  snd_ios.cpp  sys_ios.cpp  vid_ios.cpp
SlipNFrag.xcodeproj/: project.pbxproj
id1/: bspfile.h  cl_demo.cpp  cl_dtran.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  client.h  cmd.cpp  cmd.h  common.cpp  common.h  console.cpp  console.h  cvar.cpp  cvar.h  d_edge.cpp  d_iface.h  d_init.cpp  d_lists.cpp  d_lists.h  d_local.h  d_modech.cpp  d_polycl.cpp  d_polyse.cpp  d_scan.cpp  d_sky.cpp  d_sprite.cpp  d_surf.cpp  d_vars.cpp  draw.cpp  draw.h  host.cpp  host_cmd.cpp  input.h  keys.cpp  mathlib.cpp  mathlib.h  menu.cpp  menu.h  (+54 more)
renderer/: Actions.cpp  Actions.h  AliasColoredLightsPushConstants.h  AliasPushConstants.h  AliasVertices.h  AppMode.h  AppState.cpp  AppState.h  Buffer.cpp  Buffer.h  CachedAliasBuffers.cpp  CachedAliasBuffers.h  CachedBuffers.cpp  CachedBuffers.h  CachedIndexBuffers.cpp  CachedIndexBuffers.h  CachedLightmaps.cpp  CachedLightmaps.h  CachedLightmapsRGB.cpp  CachedLightmapsRGB.h  CachedLightmapsRGBA.cpp  CachedLightmapsRGBA.h  CachedSharedMemoryBuffers.cpp  CachedSharedMemoryBuffers.h  CachedSharedMemoryTextures.cpp  CachedSharedMemoryTextures.h  CachedTextures.cpp  CachedTextures.h  Constants.h  Controller.cpp  Controller.h  CylinderProjection.h  DescriptorResources.cpp  DescriptorResources.h  DescriptorResourcesLists.h  (+108 more)
(+289 files in other folders)
